--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "adapter-nekoweb",
+  "name": "svelte-adapter-nekoweb",
+  "version": "1.0.1",
   "description": "Addon adapter for SvelteKit apps that builds the site using adapter-static and automatically deploys it to Nekoweb.",
 	"keywords": [
 		"adapter",
@@ -15,9 +16,13 @@
 		},
 		"./package.json": "./package.json"
 	},
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/jbcarreon123/svelte-adapter-nekoweb"
+	},
+  "license": "MIT",
 	"types": "index.d.ts",
   "type": "module",
-  "private": true,
   "devDependencies": {
     "@types/bun": "latest"
   },
