--- a/package.json
+++ b/package.json
@@ -1,42 +1,40 @@
 {
   "name": "svelte-adapter-nekoweb",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Addon adapter for SvelteKit apps that builds the site using adapter-static and automatically deploys it to Nekoweb.",
-	"keywords": [
-		"adapter",
-		"deploy",
-		"svelte",
-		"sveltekit",
+  "keywords": [
+    "adapter",
+    "deploy",
+    "svelte",
+    "sveltekit",
     "nekoweb"
-	],
+  ],
   "exports": {
-		".": {
-			"types": "./index.d.ts",
-			"import": "./index.js"
-		},
-		"./package.json": "./package.json"
-	},
+    ".": {
+      "types": "./index.d.ts",
+      "import": "./index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "repository": {
-		"type": "git",
-		"url": "https://github.com/jbcarreon123/svelte-adapter-nekoweb"
-	},
+    "type": "git",
+    "url": "https://github.com/jbcarreon123/svelte-adapter-nekoweb"
+  },
   "license": "MIT",
-	"types": "index.d.ts",
+  "types": "index.d.ts",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@sveltejs/adapter-static": "^3.0.8",
     "@types/archiver": "^6.0.3",
-    "@types/fs-extra": "^11.0.4",
     "archiver": "^7.0.1",
-    "fs": "^0.0.1-security",
-    "fs-extra": "^11.3.0",
-    "node-fetch": "^3.3.2",
-    "util": "^0.12.5"
+    "axios": "^1.7.9",
+    "form-data": "^4.0.2",
+    "node-fetch": "^3.3.2"
   }
 }
